force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/agf__ADM_Coverage__c.object-meta.xml
<CustomObject>
    <description>Displays the code coverage numbers by feature</description>
    <label>Coverage</label>
    <nameField>
        <label>Feature/Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coverage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>