force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/fields/agf__Actual_Coverage__c.field-meta.xml
<CustomField>
    <fullName>agf__Actual_Coverage__c</fullName>
    <label>Actual Coverage (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>