force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/fields/agf__Code_Coverage_Goal_Met__c.field-meta.xml
<CustomField>
    <fullName>agf__Code_Coverage_Goal_Met__c</fullName>
    <formula>IF(  agf__Coverage_Gap__c &gt;=0, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Coverage Goal Met</label>
    <type>Text</type>
</CustomField>