force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/fields/agf__Coverage_Gap__c.field-meta.xml
<CustomField>
    <fullName>agf__Coverage_Gap__c</fullName>
    <formula>agf__Actual_Coverage__c - agf__Target_Coverage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Gap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>