force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/fields/agf__Link_to_actual_report__c.field-meta.xml
<CustomField>
    <fullName>agf__Link_to_actual_report__c</fullName>
    <label>Link to actual report</label>
    <type>Url</type>
</CustomField>