force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/fields/agf__Min_Package_Coverage_Met__c.field-meta.xml
<CustomField>
    <fullName>agf__Min_Package_Coverage_Met__c</fullName>
    <formula>IF(agf__Actual_Coverage__c&gt;=0.2, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Package Coverage Met</label>
    <type>Text</type>
</CustomField>