force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/fields/agf__Module_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Module_Name__c</fullName>
    <label>Module Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>