force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/fields/agf__NCLOC__c.field-meta.xml
<CustomField>
    <fullName>agf__NCLOC__c</fullName>
    <label>NCLOC</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>