force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/fields/agf__Package_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Package_Name__c</fullName>
    <label>Package Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>