force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/fields/agf__Report_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__Report_ID__c</fullName>
    <label>Report ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>