force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/fields/agf__Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>agf__Scheduled_Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Build</label>
    <referenceTo>agf__ADM_Build__c</referenceTo>
    <relationshipLabel>Coverage</relationshipLabel>
    <relationshipName>Coverage</relationshipName>
    <type>Lookup</type>
</CustomField>