force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/fields/agf__Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Scrum_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scrum Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipName>Feature_Code_Coverage</relationshipName>
    <type>Lookup</type>
</CustomField>