force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/fields/agf__statement__c.field-meta.xml
<CustomField>
    <fullName>agf__statement__c</fullName>
    <label># of statement</label>
    <length>8</length>
    <type>Text</type>
</CustomField>