force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/recordTypes/agf__Feature.recordType-meta.xml
<RecordType>
    <fullName>agf__Feature</fullName>
    <active>true</active>
    <description>Used to track feature specific coverage info</description>
    <label>Feature</label>
</RecordType>