force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/recordTypes/agf__Package.recordType-meta.xml
<RecordType>
    <fullName>agf__Package</fullName>
    <active>true</active>
    <description>Used to track coverage info of each java package</description>
    <label>Package</label>
</RecordType>