force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/recordTypes/agf__PLSQL_Package.recordType-meta.xml
<RecordType>
    <fullName>agf__PLSQL_Package</fullName>
    <active>true</active>
    <description>Used to track PLSQL package coverage</description>
    <label>PLSQL Package</label>
</RecordType>