force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/listViews/agf__All1.listView-meta.xml
<ListView>
    <fullName>agf__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>