force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/listViews/agf__All_d_2.listView-meta.xml
<ListView>
    <fullName>agf__All_d_2</fullName>
    <columns>NAME</columns>
    <columns>agf__Scrum_Team__c</columns>
    <columns>agf__Target_Coverage__c</columns>
    <columns>agf__Actual_Coverage__c</columns>
    <columns>agf__Coverage_Gap__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>