force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/listViews/agf__Caltivites_Coverage.listView-meta.xml
<ListView>
    <fullName>agf__Caltivites_Coverage</fullName>
    <columns>NAME</columns>
    <columns>agf__Module_Name__c</columns>
    <columns>agf__Min_Package_Coverage_Met__c</columns>
    <columns>agf__Actual_Coverage__c</columns>
    <columns>agf__Target_Coverage__c</columns>
    <columns>agf__Coverage_Gap__c</columns>
    <columns>agf__Code_Coverage_Goal_Met__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>Calendar and Activities</value>
    </filters>
    <label>Caltivites Coverage</label>
</ListView>