force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/listViews/agf__KMSTowned.listView-meta.xml
<ListView>
    <fullName>agf__KMSTowned</fullName>
    <columns>NAME</columns>
    <columns>agf__Actual_Coverage__c</columns>
    <columns>agf__Target_Coverage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>Search</value>
    </filters>
    <label>Search owned</label>
</ListView>