force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/listViews/agf__PackageCoveragetemp.listView-meta.xml
<ListView>
    <fullName>agf__PackageCoveragetemp</fullName>
    <columns>NAME</columns>
    <columns>agf__Actual_Coverage__c</columns>
    <columns>agf__Scrum_Team__c</columns>
    <columns>agf__Module_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>agf__ADM_Coverage__c.agf__PLSQL_Package</value>
    </filters>
    <label>PLSQL Package Coverage</label>
</ListView>