force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/listViews/agf__SFA_Core_Coverage.listView-meta.xml
<ListView>
    <fullName>agf__SFA_Core_Coverage</fullName>
    <columns>NAME</columns>
    <columns>agf__Module_Name__c</columns>
    <columns>agf__Min_Package_Coverage_Met__c</columns>
    <columns>agf__Actual_Coverage__c</columns>
    <columns>agf__Target_Coverage__c</columns>
    <columns>agf__Coverage_Gap__c</columns>
    <columns>agf__Code_Coverage_Goal_Met__c</columns>
    <columns>agf__Scrum_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>contains</operation>
        <value>SFA Core</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>agf__ADM_Coverage__c.agf__PLSQL_Package</value>
    </filters>
    <label>SFA Core Java Coverage</label>
</ListView>