force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/listViews/agf__SFA_Core_PLSQL_Package_Coverage.listView-meta.xml
<ListView>
    <fullName>agf__SFA_Core_PLSQL_Package_Coverage</fullName>
    <columns>NAME</columns>
    <columns>agf__Actual_Coverage__c</columns>
    <columns>agf__Scrum_Team__c</columns>
    <columns>agf__Module_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>agf__ADM_Coverage__c.agf__PLSQL_Package</value>
    </filters>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>SFA Core</value>
    </filters>
    <label>SFA Core PLSQL Coverage</label>
</ListView>