force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/listViews/agf__SFA_Forecasting_Java_Coverage.listView-meta.xml
<ListView>
    <fullName>agf__SFA_Forecasting_Java_Coverage</fullName>
    <columns>NAME</columns>
    <columns>agf__Actual_Coverage__c</columns>
    <columns>agf__Code_Coverage_Goal_Met__c</columns>
    <columns>agf__Min_Package_Coverage_Met__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>SFA Forecasting</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>agf__ADM_Coverage__c.agf__Package</value>
    </filters>
    <label>SFA Forecasting Java Coverage</label>
</ListView>