force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Coverage__c/listViews/agf__SharingTeamOwned.listView-meta.xml
<ListView>
    <fullName>agf__SharingTeamOwned</fullName>
    <columns>NAME</columns>
    <columns>agf__Actual_Coverage__c</columns>
    <columns>agf__Target_Coverage__c</columns>
    <columns>agf__Coverage_Gap__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>App Security and Sharing</value>
    </filters>
    <label>Sharing Team Owned</label>
</ListView>